Refactor: Reuse duplicate checking logic
Reuse duplicate checking logic in `generatePreviewSlots` to prevent duplicate slot entries. This change ensures consistency and avoids redundant code by leveraging the existing validation mechanisms.